Fixing some issues regarding alignment and enabling desktop mode bydefault on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -62,9 +62,16 @@
   }
 } */
 html, body {
-  height: 100%;  /* Ensure full height */
+  height: 100%; /* Ensure full height */
+  overflow: auto;
 }
 
+/* Apply to small devices and smaller than small devices */
+@media (min-width: 640px) {
+  html, body {
+    overflow-y: hidden; /* Prevent scrolling on smaller devices */
+  }
+}
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
